Responsive Design Added & Footer Adjusted

--- a/connect.html
+++ b/connect.html
@@ -62,12 +62,11 @@
         <footer class="section-footer">
             <div class="footer">
                 <ul class="footer-information">
-                    <li><a href="#" class="platform-link" target="_blank">WELCOME TO KREATE &nbsp;&nbsp;&#9724;&nbsp;&nbsp; SPARK MOTION TODAY &nbsp;&nbsp;&#9724;&nbsp;&nbsp; KREATE IS IN DEVELOPMENT FOR MOBILES AND TABLETS</a></li>
+                    <li><a href="#" class="platform-link">WELCOME TO KREATE &nbsp;&nbsp;&#9724;&nbsp;&nbsp; SPARK MOTION</a></li>
                 </ul>
             </div>
         </footer>
     </main>
-<script src="script.js" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/cd87449f3b.js" crossorigin="anonymous"></script>
 </body>
 </html>
