--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
         <footer class="section-footer">
             <div class="footer">
                 <ul class="footer-information">
-                    <li><a href="#" class="platform-link">WELCOME TO KREATE &nbsp;&nbsp;&#9724;&nbsp;&nbsp; SPARK MOTION</a></li>
+                    <li><a href="#" class="platform-link">WELCOME TO KREATE &nbsp;&nbsp;•&nbsp;&nbsp; SPARK MOTION</a></li>
                 </ul>
             </div>
         </footer>
