--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                     <p class="step-number step-number-one">STEP ONE</p>
                     <p class="step-description">
                         <span class="step-title step-title-one">EXPAND</span><br><br>
-                        HELLO I AM KURRUN CHADHA AND WELCOME TO KREATE. THE PLATFORM IS QUICK TO USE IN THREE EASY STEPS:<br><br>
+                        HELLO I AM KURRUN CHADHA (KC) AND WELCOME TO KREATE. THE PLATFORM IS QUICK TO USE IN THREE EASY STEPS:<br><br>
                         EXPAND ON YOUR IMAGINATION BY SUBMITTING THE <a href="connect.html" class="description-link">FORM</a> WITH MUCH DETAIL.
                     </p>
                 </div>
