--- a/about.html
+++ b/about.html
@@ -26,45 +26,50 @@
         <section class="section-about">
             <div class="heading-text-box">
                 <h1 class="primary-heading">ABOUT</h1>
+                <p class="about-text">
+                    KREATE IS A BRAND <span>AIMING</span> TO SPARK MOTION TO YOUR <span>VISION</span><br>
+                    BY DELIVERING <span>EXCELLENCE ONLY</span><br><br>
+                    IT IS <span>QUICK</span> AND <span>EASY</span> TO CONNECT WITH ME <span>FOLLOWING</span> THE STEPS BELOW
+                </p>
             </div>
             <div class="about">
                 <div class="about-text-box">
                     <p class="step-number step-number-one">STEP ONE</p>
                     <p class="step-description">
                         <span class="step-title step-title-one">EXPAND</span><br><br>
-                        HELLO I AM KURRUN CHADHA (KC) AND WELCOME TO KREATE. THE PLATFORM IS QUICK TO USE IN THREE EASY STEPS:<br><br>
-                        EXPAND ON YOUR IMAGINATION BY SUBMITTING THE <a href="connect.html" class="description-link">FORM</a> WITH MUCH DETAIL.
+                        YOU NEED TO EXPAND ON YOUR REQUEST BY SUBMITTING THE <a href="connect.html" class="description-link">FORM</a> 
+                        IN DETAIL INCLUDING THE <a href="packages.html" class="description-link">PACKAGE</a> YOU WANT.
                     </p>
                 </div>
                 <div class="about-img-box">
-                    <img src="imgs/step-img-1.png" class="step-img" alt="Image of -----">
+                    <img src="imgs/step-img-1-2.0.png" class="step-img" alt="Image of -----">
                 </div>
                 <div class="about-img-box">
-                    <img src="imgs/step-img-2.png" class="step-img" alt="Image of -----">
+                    <img src="imgs/step-img-2-2.0.png" class="step-img" alt="Image of -----">
                 </div>
                 <div class="about-text-box">
                     <p class="step-number step-number-two">STEP TWO</p>
                     <p class="step-description">
                        <span class="step-title step-title-two">REVIEW</span><br><br>
-                       REVIEW OF YOUR SUBMISSION TO GET PERSPECTIVE ON WHAT I NEED TO CREATE.
+                       I WILL REVIEW YOUR SUBMISSION TO GET PERSPECTIVE ON WHAT WE NEED TO CREATE TOGETHER.
                     </p>
                 </div>
                 <div class="about-text-box">
                     <p class="step-number step-number-three">STEP THREE</p>
                     <p class="step-description">
                         <span class="step-title step-title-three">SPARK</span><br><br>
-                        SPARK MOTION TO YOUR IMAGINATION PROMPTLY AND PROFESSIONALLY.
+                        WE TAKE THE FIRST STEP AND SPARK MOTION TO YOUR VISION BY DELIVERING KREATIVE EXCELLENCE.
                     </p>
                 </div>
                 <div class="about-img-box">
-                    <img src="imgs/step-img-3.png" class="step-img" alt="Image of -----">
+                    <img src="imgs/step-img-3-2.0.png" class="step-img" alt="Image of -----">
                 </div>
             </div>
         </section>
         <footer class="section-footer">
             <div class="footer">
                 <ul class="footer-information">
-                    <li><a href="#" class="platform-link">WELCOME TO KREATE &nbsp;&nbsp;•&nbsp;&nbsp; SPARK MOTION</a></li>
+                    <li><a href="#" class="platform-link">INTRODUCING KREATE &nbsp;&nbsp;◉&nbsp;&nbsp; OFFICIAL LAUNCH</a></li>
                 </ul>
             </div>
         </footer>
