--- a/packages.html
+++ b/packages.html
@@ -26,10 +26,13 @@
         <section class="section-packages">
             <div class="heading-text-box">
                 <h1 class="primary-heading">PACKAGES</h1>
+                <p class="packages-text">
+                    KREATE <span>OFFERS</span> THREE PACKAGES <span>DESIGNED</span> TO MEET <br>THE <span>NEEDS</span> OF ALL USERS
+                </p>
             </div>
             <div class="package">
                 <div class="package-plan">
-                    <i class="fa-solid fa-fire-flame-simple"></i>
+                    <!-- <i class="fa-solid fa-fire-flame-simple"></i> -->
                     <p class="package-name">SPARK</p>
                     <p class="package-price">£5</p>
                     <ul class="package-attributes">
@@ -39,21 +42,21 @@
                             </span>
                         </li>
                         <li class="package-attribute">
-                            <span>02</span>DAY DELIVERY
+                            <span>TWO</span>DAY DELIVERY
                         </li>
                         <li class="package-attribute">
-                            <span>01</span>REVISION
+                            <span>ONE</span>REVISION
                         </li>
                     </ul>
                     <div class="package-sign-up">
                         <a href="connect.html" class="btn btn-full">CONNECT</a>
                     </div>
                     <div class="package-information">
-                        <p class="package-additional">PLEASE READ ALL THE <span>CONDITIONS</span> BELOW</p>
+                        <p class="package-additional">PLEASE <span>READ</span> ALL THE <span>CONDITIONS</span> BELOW</p>
                     </div>
                 </div>
                 <div class="package-plan">
-                    <i class="fa-solid fa-fire-flame-curved"></i>
+                    <!-- <i class="fa-solid fa-fire-flame-curved"></i> -->
                     <p class="package-name">FLARE</p>
                     <p class="package-price">£10</p>
                     <ul class="package-attributes">
@@ -63,21 +66,21 @@
                             </span>
                         </li>
                         <li class="package-attribute">
-                            <span>03</span>DAY DELIVERY
+                            <span>THREE</span>DAY DELIVERY
                         </li>
                         <li class="package-attribute">
-                            <span>02</span>REVISIONS
+                            <span>TWO</span>REVISIONS
                         </li>
                     </ul>
                     <div class="package-sign-up">
                         <a href="connect.html" class="btn btn-full">CONNECT</a>
                     </div>
                     <div class="package-information">
-                        <p class="package-additional">PLEASE READ ALL THE <span>CONDITIONS</span> BELOW</p>
+                        <p class="package-additional">PLEASE <span>READ</span> ALL THE <span>CONDITIONS</span> BELOW</p>
                     </div>
                 </div>
                 <div class="package-plan">
-                    <i class="fa-solid fa-fire"></i>
+                    <!-- <i class="fa-solid fa-fire"></i> -->
                     <p class="package-name">IGNITE</p>
                     <p class="package-price">£15</p>
                     <ul class="package-attributes">
@@ -87,35 +90,37 @@
                             </span>
                         </li>
                         <li class="package-attribute">
-                            <span>04</span>DAY DELIVERY
+                            <span>FOUR</span>DAY DELIVERY
                         </li>
                         <li class="package-attribute">
-                            <span>03</span>REVISIONS
+                            <span>THREE</span>REVISIONS
                         </li>
                     </ul>
                     <div class="package-sign-up">
                         <a href="connect.html" class="btn btn-full">CONNECT</a>
                     </div>
                     <div class="package-information">
-                        <p class="package-additional">PLEASE READ ALL THE <span>CONDITIONS</span> BELOW</p>
+                        <p class="package-additional">PLEASE <span>READ</span> ALL THE <span>CONDITIONS</span> BELOW</p>
                     </div>
                 </div>
             </div>
+            <div class="heading-text-box">
             <h1 class="primary-heading">CONDITIONS</h1>
             <div class="package-conditions">
-                <p class="package-additional">ALL PRODUCTS ARE CRAFTED <span>PROMPTLY</span> AND <span>PROFESSIONALLY.</span></p><br>
-                <p class="package-additional"><span>PAYMENTS</span> ARE REQUIRED <span>UP-FRONT.</span></p><br>
-                <p class="package-additional"><span>REVISIONS</span> ARE <span>REQUESTS</span> TO <span>MODIFY</span> THE <span>PRODUCT.</span></p>
-                <p class="package-additional">THE <span>DELIVERY DATE</span> MARKS THE <span>FIRST</span> VERSION OF THE PRODUCT.</p>
-                <p class="package-additional"><span>REVISIONS</span> CAN BE <span>DISCUSSED</span> AFTER THE <span>FIRST</span> VERSION OF THE PRODUCT.</span></p><br>
-                <p class="package-additional"><span>REFUNDS</span> WILL BE MADE IN THE CASE OF A <span>VISIBLE BREACH</span> OF THE <span>AGREEMENT.</span></p>
-                <p class="package-additional"><span>PERSONAL TASTE</span> IS <span>NOT</span> A VALID REASON FOR A <span>REFUND.</span></p><br>
+                <p class="package-condition">ALL PRODUCTS ARE CRAFTED <span>PROMPTLY</span> AND <span>PROFESSIONALLY.</span></p><br>
+                <p class="package-condition"><span>PAYMENTS</span> ARE REQUIRED <span>UP-FRONT.</span></p><br>
+                <p class="package-condition"><span>REVISIONS</span> ARE <span>REQUESTS</span> TO <span>MODIFY</span> THE <span>PRODUCT.</span></p>
+                <p class="package-condition"></p>THE <span>DELIVERY DATE</span> MARKS THE <span>FIRST</span> VERSION OF THE PRODUCT.</p>
+                <p class="package-condition"><span>REVISIONS</span> CAN BE <span>DISCUSSED</span> AFTER THE <span>FIRST</span> VERSION OF THE PRODUCT.</span></p><br>
+                <p class="package-condition"><span>REFUNDS</span> WILL BE MADE IN THE CASE OF A <span>VISIBLE BREACH</span> OF THE <span>AGREEMENT.</span></p>
+                <p class="package-condition"><span>PERSONAL TASTE</span> IS <span>NOT</span> A VALID REASON FOR A <span>REFUND.</span></p><br>
+            </div>
             </div>
         </section>
         <footer class="section-footer">
             <div class="footer">
                 <ul class="footer-information">
-                    <li><a href="#" class="platform-link">WELCOME TO KREATE &nbsp;&nbsp;•&nbsp;&nbsp; SPARK MOTION</a></li>
+                    <li><a href="#" class="platform-link">INTRODUCING KREATE &nbsp;&nbsp;◉&nbsp;&nbsp; OFFICIAL LAUNCH</a></li>
                 </ul>
             </div>
         </footer>
