--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,9 @@
         <section class="section-portfolio">
             <div class="heading-text-box">
                 <h1 class="primary-heading">PORTFOLIO</h1>
+                <p class="portfolio-text">
+                    A <span>BREAKDOWN</span> OF MY PORTFOLIO
+                </p>
             </div>
             <div class="portfolio">
                 <a href="imgs/img-1.png" target="_blank"><img src="imgs/img-1.png" class="portfolio-img" alt="Image of a poster featuring Central Cee"></a>
@@ -36,7 +39,7 @@
         <footer class="section-footer">
             <div class="footer">
                 <ul class="footer-information">
-                    <li><a href="#" class="platform-link">WELCOME TO KREATE &nbsp;&nbsp;•&nbsp;&nbsp; SPARK MOTION</a></li>
+                    <li><a href="#" class="platform-link">INTRODUCING KREATE &nbsp;&nbsp;◉&nbsp;&nbsp; OFFICIAL LAUNCH</a></li>
                 </ul>
             </div>
         </footer>
