--- a/connect.html
+++ b/connect.html
@@ -26,6 +26,9 @@
         <section class="section-cta">
             <div class="heading-text-box">
                 <h1 class="primary-heading">CONNECT</h1>
+                <p class="cta-text">
+                    <span>CONNECT</span> NOW AND WE CAN <span>DISCUSS</span> YOUR VISION <span>TOGETHER</span>
+                </p>
             </div>
             <div class="cta">
                 <div class="contact">
@@ -50,7 +53,7 @@
                             </div>
                             <div>
                                 <label for="information">COMMENTS</label>
-                                <textarea id="information" placeholder="PLEASE DESCRIBE WHAT YOU ARE LOOKING FOR" name="Comments" onkeyup="sendForm()" required></textarea>
+                                <textarea id="information" class="comments-box" placeholder="PLEASE DESCRIBE WHAT YOU ARE LOOKING FOR" name="Comments" onkeyup="sendForm()" required></textarea>
                             </div>
                             <a href="" id="connect"><button type="submit" class="btn btn-form" href="">CONNECT</button></a>
                         </div>
@@ -62,7 +65,7 @@
         <footer class="section-footer">
             <div class="footer">
                 <ul class="footer-information">
-                    <li><a href="#" class="platform-link">WELCOME TO KREATE &nbsp;&nbsp;•&nbsp;&nbsp; SPARK MOTION</a></li>
+                    <li><a href="#" class="platform-link">INTRODUCING KREATE &nbsp;&nbsp;◉&nbsp;&nbsp; OFFICIAL LAUNCH</a></li>
                 </ul>
             </div>
         </footer>
