--- a/index.html
+++ b/index.html
@@ -25,13 +25,21 @@
     <main>
         <section class="section-index">
             <div class="index">
-                    <img src="imgs/kreate-license-uk.png" class="index-img" alt="Image of the official designer license">
+                <div class="index-text-box">
+                    <p class="index-text">WELCOME TO</p>
+                    <h1 class="index-heading">KREATE</h1>
+                    <p class="index-text index-text-lower">OFFICIAL LAUNCH</p>
+                    <a href="about.html"><button class="btn btn-index">LEARN MORE</button></a>
+                </div>
+                <div class="index-img-box">
+                    <img src="imgs/index-img-2.png" class="index-img" alt="Image of the official logo">
+                </div>
             </div>
         </section>
         <footer class="section-footer">
             <div class="footer">
                 <ul class="footer-information">
-                    <li><a href="#" class="platform-link">WELCOME TO KREATE &nbsp;&nbsp;•&nbsp;&nbsp; SPARK MOTION</a></li>
+                    <li><a href="#" class="platform-link">INTRODUCING KREATE &nbsp;&nbsp;◉&nbsp;&nbsp; OFFICIAL LAUNCH</a></li>
                 </ul>
             </div>
         </footer>
