--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="imgs/favicon.ico">
-    <title>SPARK MOTION</title>
+    <title>EXCELLENCE ONLY</title>
 </head>
 <body>
     <header class="header">
@@ -27,9 +27,11 @@
             <div class="heading-text-box">
                 <h1 class="primary-heading">ABOUT</h1>
                 <p class="about-text">
-                    KREATE IS A BRAND <span>AIMING</span> TO SPARK MOTION TO YOUR <span>VISION</span><br>
-                    BY DELIVERING <span>EXCELLENCE ONLY</span><br><br>
-                    IT IS <span>QUICK</span> AND <span>EASY</span> TO CONNECT WITH ME <span>FOLLOWING</span> THE STEPS BELOW
+                    KREATE IS A BRAND <span>AIMING</span> TO SPARK MOTION TO YOUR <span>VISION</span>
+                    BY DELIVERING <span>EXCELLENCE</span> THROUGH
+                    <span>GRAPHIC</span> DESIGN AND <span>VIDEO</span> DESIGN.<br><br>
+                    IT IS <span>QUICK</span> AND <span>EASY</span> TO CONNECT WITH ME
+                    <span>FOLLOWING</span> THE STEPS <span>BELOW:</span>
                 </p>
             </div>
             <div class="about">
@@ -38,7 +40,7 @@
                     <p class="step-description">
                         <span class="step-title step-title-one">EXPAND</span><br><br>
                         YOU NEED TO EXPAND ON YOUR REQUEST BY SUBMITTING THE <a href="connect.html" class="description-link">FORM</a> 
-                        IN DETAIL INCLUDING THE <a href="packages.html" class="description-link">PACKAGE</a> YOU WANT.
+                        IN DETAIL INCLUDING THE <a href="packages.html" class="description-link">PACKAGE</a> YOU DESIRE.
                     </p>
                 </div>
                 <div class="about-img-box">
@@ -58,7 +60,7 @@
                     <p class="step-number step-number-three">STEP THREE</p>
                     <p class="step-description">
                         <span class="step-title step-title-three">SPARK</span><br><br>
-                        WE TAKE THE FIRST STEP AND SPARK MOTION TO YOUR VISION BY DELIVERING KREATIVE EXCELLENCE.
+                        WE TAKE THE FIRST STEP AND SPARK MOTION TO YOUR VISION BY DELIVERING EXCELLENCE.
                     </p>
                 </div>
                 <div class="about-img-box">
