--- a/connect.html
+++ b/connect.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="imgs/favicon.ico">
-    <title>SPARK MOTION</title>
+    <title>EXCELLENCE ONLY</title>
 </head>
 <body>
     <header class="header">
@@ -27,7 +27,8 @@
             <div class="heading-text-box">
                 <h1 class="primary-heading">CONNECT</h1>
                 <p class="cta-text">
-                    <span>CONNECT</span> NOW AND WE CAN <span>DISCUSS</span> YOUR VISION <span>TOGETHER</span>
+                    <span>SUBMIT</span> THE FORM BELOW AND WE CAN TAKE THE
+                    <span>FIRST</span> STEP AND SPARK MOTION TO YOUR <span>VISION.</span>
                 </p>
             </div>
             <div class="cta">
