--- a/packages.html
+++ b/packages.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="imgs/favicon.ico">
-    <title>SPARK MOTION</title>
+    <title>EXCELLENCE ONLY</title>
 </head>
 <body>
     <header class="header">
@@ -27,7 +27,8 @@
             <div class="heading-text-box">
                 <h1 class="primary-heading">PACKAGES</h1>
                 <p class="packages-text">
-                    KREATE <span>OFFERS</span> THREE PACKAGES <span>DESIGNED</span> TO MEET <br>THE <span>NEEDS</span> OF ALL USERS
+                    KREATE <span>OFFERS</span> THREE PACKAGES <span>DESIGNED</span> TO MEET
+                    THE VARYING <span>NEEDS</span> OF USERS.
                 </p>
             </div>
             <div class="package">
@@ -113,7 +114,7 @@
                 <p class="package-condition"></p>THE <span>DELIVERY DATE</span> MARKS THE <span>FIRST</span> VERSION OF THE PRODUCT.</p>
                 <p class="package-condition"><span>REVISIONS</span> CAN BE <span>DISCUSSED</span> AFTER THE <span>FIRST</span> VERSION OF THE PRODUCT.</span></p><br>
                 <p class="package-condition"><span>REFUNDS</span> WILL BE MADE IN THE CASE OF A <span>VISIBLE BREACH</span> OF THE <span>AGREEMENT.</span></p>
-                <p class="package-condition"><span>PERSONAL TASTE</span> IS <span>NOT</span> A VALID REASON FOR A <span>REFUND.</span></p><br>
+                <p class="package-condition"><span>PERSONAL TASTE</span> IS <span>NOT</span> A VALID REASON FOR A <span>REFUND.</span></p>
             </div>
             </div>
         </section>
