Adjusted Countdown Clock & About Page

--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
                 <h1 class="primary-heading">ABOUT</h1>
                 <p class="about-text">
                     KREATE IS A BRAND <span>AIMING</span> TO SPARK MOTION TO YOUR <span>VISION</span>
-                    BY DELIVERING <span>EXCELLENCE</span> THROUGH
-                    <span>GRAPHIC</span> DESIGN AND <span>VIDEO</span> DESIGN.<br><br>
+                    BY DELIVERING <span>EXCELLENCE.</span> FROM
+                    <span>STRIKING</span> VISUALS TO <span>SEAMLESS</span> VIDEOS.<br><br>
                     IT IS <span>QUICK</span> AND <span>EASY</span> TO CONNECT WITH ME
                     <span>FOLLOWING</span> THE STEPS <span>BELOW:</span>
                 </p>
