--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
             <div class="heading-text-box">
                 <h1 class="primary-heading">ABOUT</h1>
                 <p class="about-text">
-                    KREATE IS A BRAND <span>AIMING</span> TO SPARK MOTION TO YOUR <span>VISION</span>
+                    KREATE IS A BRAND <span>AIMING</span> TO <span>SPARK</span> MOTION TO YOUR <span>VISION</span>
                     BY DELIVERING <span>EXCELLENCE.</span> FROM
                     <span>STRIKING</span> VISUALS TO <span>SEAMLESS</span> VIDEOS.<br><br>
-                    IT IS <span>QUICK</span> AND <span>EASY</span> TO CONNECT WITH ME
+                    IT IS <span>QUICK</span> AND <span>EASY</span> TO CONNECT
                     <span>FOLLOWING</span> THE STEPS <span>BELOW:</span>
                 </p>
             </div>
