--- a/connect.html
+++ b/connect.html
@@ -27,8 +27,8 @@
             <div class="heading-text-box">
                 <h1 class="primary-heading">CONNECT</h1>
                 <p class="cta-text">
-                    <span>SUBMIT</span> THE FORM BELOW AND WE CAN TAKE THE
-                    <span>FIRST</span> STEP AND SPARK MOTION TO YOUR <span>VISION.</span>
+                    <span>SUBMIT</span> THE FORM BELOW TO TAKE THE
+                    <span>FIRST</span> STEP AND <span>SPARK</span> MOTION TO YOUR <span>VISION.</span>
                 </p>
             </div>
             <div class="cta">
