--- a/packages.html
+++ b/packages.html
@@ -27,8 +27,8 @@
             <div class="heading-text-box">
                 <h1 class="primary-heading">PACKAGES</h1>
                 <p class="packages-text">
-                    KREATE <span>OFFERS</span> THREE PACKAGES <span>DESIGNED</span> TO MEET
-                    THE VARYING <span>NEEDS</span> OF USERS.
+                    KREATE <span>OFFERS</span> THREE PACKAGES <span>TAILORED</span> TO MEET
+                    THE <span>NEEDS</span> OF CLIENTS.
                 </p>
             </div>
             <div class="package">
