--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
                 <h1 class="primary-heading">PORTFOLIO</h1>
                 <p class="portfolio-text">
                     PORTFOLIO <span>BREAKDOWN</span> FEATURING A
-                    <span>CENTRAL CEE</span> ALBUM ANNOUNCEMENT <span>POSTER</span> AND <span>MORE.</span>
+                    <span>SPRINKLE</span> OF THE <span>DESIGNS</span> OVER THE YEARS.
                 </p>
             </div>
             <div class="portfolio">
