--- a/packages.html
+++ b/packages.html
@@ -26,10 +26,10 @@
         <section class="section-packages">
             <div class="heading-text-box">
                 <h1 class="primary-heading">PACKAGES</h1>
-                <p class="packages-text">
+                <!-- <p class="packages-text">
                     KREATE <span>OFFERS</span> THREE PACKAGES <span>TAILORED</span> TO MEET
                     THE <span>NEEDS</span> OF CLIENTS.
-                </p>
+                </p> -->
             </div>
             <div class="package">
                 <div class="package-plan">
