--- a/portfolio.html
+++ b/portfolio.html
@@ -26,10 +26,10 @@
         <section class="section-portfolio">
             <div class="heading-text-box">
                 <h1 class="primary-heading">PORTFOLIO</h1>
-                <p class="portfolio-text">
+                <!-- <p class="portfolio-text">
                     PORTFOLIO <span>BREAKDOWN</span> FEATURING A
                     <span>SPRINKLE</span> OF THE <span>DESIGNS</span> OVER THE YEARS.
-                </p>
+                </p> -->
             </div>
             <div class="portfolio">
                 <a href="imgs/img-1.png" target="_blank"><img src="imgs/img-1.png" class="portfolio-img" alt="Image of a poster featuring Central Cee"></a>
