--- a/connect.html
+++ b/connect.html
@@ -26,10 +26,10 @@
         <section class="section-cta">
             <div class="heading-text-box">
                 <h1 class="primary-heading">CONNECT</h1>
-                <p class="cta-text">
+                <!-- <p class="cta-text">
                     <span>SUBMIT</span> THE FORM BELOW TO TAKE THE
                     <span>FIRST</span> STEP AND <span>SPARK</span> MOTION TO YOUR <span>VISION.</span>
-                </p>
+                </p> -->
             </div>
             <div class="cta">
                 <div class="contact">
